# AutomateDynamatic

./: .gitignore  CMakeLists.txt  Makefile  README.md  axi_files.c  axi_files.h  error.h  file.c  file.h  hdl.c  hdl.h  hdl_data.c  hdl_data.h  main.c  parser.c  parser.h  tcl.c  tcl.h  tcl_board.c  tcl_board.h  utils.c  utils.h  vivado.c  vivado.h  vivado_hls.c  vivado_hls.h
app/: CMakeLists.txt  main.c
apps/: main.c
include/: axi_files.h  error.h  hdl.h  regex_wrapper.h  tcl.h  tcl_board.h  utils.h  vivado.h  vivado_hls.h
src/: CMakeLists.txt  axi_files.c  hdl.c  regex_wrapper.c  tcl.c  tcl_board.c  utils.c  vivado.c  vivado_hls.c
